...
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="date_picker">Date Picker</string>
    <string name="field_hint">Enter Text</string>
    <string name="age_label">Age</string>
    <string name="back">Back</string>
    <string name="emptyFields">One or more fields are empty</string>
    <string name="underEighteen">You must enter a valid date of birth and be over 18 to enter</string>
    <string name="personal_description">Personal Description</string>
    <string name="occupation">Occupation</string>
    <string name="profile_picture">profile picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
...
