...
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading" />

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="@dimen/cards_button_width"
            android:layout_height="@dimen/cards_button_height"
            android:layout_marginEnd="@dimen/md_keylines"
            android:layout_below="@+id/card_text"
            android:layout_alignParentEnd="true"
            style="?android:attr/borderlessButtonStyle" />
...
